src/test/deca/context/invalid/intermediaire2/mots_reserves/02extends.deca
// Description:
// Test du mettre le mot réservé extends, en nom de variable.
//
// Resultats:
//  02extends.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int extends;
}